--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apollo-server-express": "^2.11.0",
     "aws-sdk": "^2.644.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql-tools": "^4.0.7",
