--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^4.0.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.5",
+    "mongoose-paginate-v2": "^1.3.9",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0"
   }
